<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blackColor"
    android:paddingStart="@dimen/margin_16dp"
    android:paddingLeft="@dimen/dp16"
    android:paddingEnd="@dimen/margin_16dp"
    android:paddingRight="@dimen/dp16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp4"
        android:gravity="center"
        android:minHeight="@dimen/dp48"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/dp4"
            android:text="@string/app_name"
            android:textSize="@dimen/txt_size_22sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginLeft="@dimen/dp4"
            android:text="@string/password_recovery_page_name"
            android:textSize="@dimen/txt_size_22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp4"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:gravity="center"
            android:minHeight="@dimen/dp48"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/dp4"
                android:contentDescription="@string/warning_icon_description"
                android:src="@android:drawable/ic_dialog_alert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/dp4"
                android:text="@string/password_recovered_message"
                android:textSize="@dimen/txt_size_18sp" />

        </LinearLayout>

        <Button
            android:id="@id/loginButton"
            android:layout_width="@dimen/dp144"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/dp4"
            android:height="@dimen/dp40"
            android:text="@string/login_text" />

    </LinearLayout>

</LinearLayout>