<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blackColor"
    android:padding="@dimen/margin_4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp4"
        android:gravity="center"
        android:minHeight="@dimen/dp48"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"
            android:text="@string/app_name"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/restore_password_page_name"
            android:textSize="@dimen/text_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp4"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp48"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/dp4"
                android:gravity="center_vertical|end"
                android:text="@string/login_prompt"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/loginField"
                android:layout_width="@dimen/dp144"
                android:layout_height="@dimen/dp48"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/dp4"
                android:inputType="numberDecimal"
                android:textSize="@dimen/txt_size_18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/restorePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="Restore Password"
            android:textSize="@dimen/txt_size_18sp" />

    </LinearLayout>

</LinearLayout>
                