<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/blankCardView_ids"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#3EFFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subConsLay_ids"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/addProgress_ids"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:indeterminateTint="@color/colorRed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mProgressTv_ids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/getting_banks"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/try_get_banks_again_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_36dp"
        android:layout_below="@id/progress_text"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/btn_border_white"
        android:text="@string/try_get_banks_again"
        android:textColor="@color/colorBlack"
        android:visibility="invisible">

    </Button>

    <Button
        android:id="@+id/proceed_with_cached_banks_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_36dp"
        android:layout_below="@id/try_get_banks_again_btn"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/btn_border_white2"
        android:foreground="@drawable/my_ripple"
        android:text="@string/proceed_with_cached_banks"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="invisible">

    </Button>

</RelativeLayout>